# user-research

./: .pre-commit-config.yaml  README.MD  conftest.py  pyproject.toml  setup.cfg
tests/: test_user_research.py
tests/user_research/stat_tests/: test_conf_interval.py
tests/user_research/types/: algorithms.py
user_research/: utils.py
user_research/stat_tests/: __init__.py  conf_interval.py
user_research/types/: __init__.py  algorithms.py  algs.py  basics.py
