[tool.poetry]
name = "user-research"
version = "0.1.0"
description = ""
authors = ["Hadi Gharibi <hady.gharibi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
scipy = "^1.7.1"
varname = "^0.8.1"
statsmodels = "^0.13.0"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
wemake-python-styleguide = "^0.15.3"
pre-commit = "^2.15.0"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
